# mlops_project

./: Dockerfile  LICENSE  README.md  commands.py  docker-compose.yaml  old_Dockerfile  pyproject.toml  requirements.txt
.dvc/: config
.dvc/tmp/: lock
anomaly_detection/: infer.py  perf_model.py  train.py
anomaly_detection/encoder/: word2vecEncoder.py
config/: train_config.yaml
log_parser/: .gitignore  EngCorpus.pkl.dvc  logs.dvc
log_parser/offline_logparser/: run.py
log_parser/offline_logparser/layers/: dict_group_layer.py
log_parser/online_logparser/: online_run.py
log_parser/online_logparser/layers/: dictonline_group_layer.py  layer.py
tests/: test_version.py
