[tool.poetry]
name = "SwissLog"
version = "0.1.0"
description = "Repository for anomaly detection in unsrtuctured logs for MLOPs course at MIPT"
authors = ["Pyastolov Egor <piastolov.ee@phystech.edu>"]
maintainers = ["Pyastolov Egor <piastolov.ee@phystech.edu>"]
readme = "README.md"
repository = "https://github.com/Regylirovshik/mlops_project.git"
keywords = ["reproducibility", "data science", "machine learning", "template"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["SwissLog"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ['E203', 'E501', 'W503', 'B950']
max-complexity = 12
select = ['B', 'C', 'E', 'F', 'W', 'B9']
per-file-ignores = [
    # for easier imports to __init__ without __all__
    '**/__init__.py: F401',
    # file to define custom types
    'types.py: F401',
]
count = true

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
